
executable('test-container-cxx',
           'test-container-cxx.cpp',
           dependencies : sqxc)

executable('test-cxx',
           'test-cxx.cpp',
           dependencies : sqxc)

executable('test-migration',
           'test-migration.c',
           dependencies : sqxc)

executable('test-query',
           'test-query.c',
           dependencies : sqxc)

executable('test-sqxc',
           'test-sqxc.c',
           dependencies : sqxc)

executable('test-storage',
           'test-storage.c',
           dependencies : sqxc)

executable('test-util',
           'test-util.c',
           dependencies : sqxc)

