
executable('test-container-cxx',
           'test-container-cxx.cpp',
           dependencies : sqxc)

executable('test-cxx',
           'test-cxx.cpp',
           dependencies : sqxcsupport)

executable('test-migration',
           'test-migration.c',
           dependencies : sqxc)

executable('test-query',
           'test-query.c',
           dependencies : sqxc)

executable('test-sqxc',
           'test-sqxc.c',
           dependencies : sqxcsupport)

executable('test-storage',
           'test-storage.c',
           dependencies : sqxc)

executable('test-convert',
           'test-convert.c',
           dependencies : sqxcsupport)

